# payload-manager

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.cuda  Dockerfile.examples  Dockerfile.examples.cuda  Dockerfile.examples.python.cuda  Dockerfile.otel  Dockerfile.payloadctl  Dockerfile.test  Makefile  README.md  buf.gen.yaml  docker-compose.examples.cuda.yml  docker-compose.examples.python.cuda.yml  docker-compose.examples.python.yml  docker-compose.examples.yml  docker-compose.gpu.postgres.yml  docker-compose.gpu.sqlite.yml  docker-compose.observability.yml  docker-compose.otel.postgres.yml  docker-compose.otel.sqlite.yml  docker-compose.postgres.yml  docker-compose.sqlite.yml  docker-compose.stress.yml  docker-compose.test.yml  docker-compose.yml
api/: CMakeLists.txt  README.md
api/payload/manager/: v1.hpp  v1_compat.hpp
client/cpp/: CMakeLists.txt  PayloadManagerClientCppConfig.cmake.in  README.md  client.cc  client.h  payload_client.cc  payload_client.h  payload_manager_client.cc  payload_manager_client.h
cmd/payload-manager/: CMakeLists.txt  main.cpp
cmd/payloadctl/: CMakeLists.txt  main.cpp
config/: README.md  (+14 more)
examples/cpp/: CMakeLists.txt  allocate_example.cpp  catalog_admin_example.cpp  example_util.hpp  gpu_example.cpp  list_example.cpp  metadata_example.cpp  otel_tracer.cpp  otel_tracer.hpp  read_example.cpp  round_trip_example.cpp  spill_example.cpp  stats_example.cpp  stream_example.cpp  tier_spill_stress.cpp  traced_channel.hpp
internal/: CMakeLists.txt  factory.cpp  factory.hpp
internal/config/: CMakeLists.txt  config.proto  config_loader.cpp  config_loader.hpp  observablity.proto
internal/config/arrow/: arrow_fs_azure.proto  arrow_fs_gcs.proto  arrow_fs_hdfs.proto  arrow_fs_s3.proto  arrow_storage.proto
internal/core/: payload_manager.cpp  payload_manager.hpp  placement_engine.cpp  placement_engine.hpp
internal/db/: CMakeLists.txt
internal/db/api/: CMakeLists.txt  access_repository.hpp  connection.hpp  database.hpp  job_repository.hpp  lineage_repository.hpp  location_repository.hpp  payload_repository.hpp  repository.hpp  result.hpp  transaction.hpp  types.hpp
internal/db/memory/:  memory_location_repo.cpp  CMakeLists.txt  memory_database.cpp  memory_payload_repo.cpp  memory_repository.cpp  memory_repository.hpp  memory_tx.cpp  memory_tx.hpp
internal/db/model/: lineage_record.hpp  metadata_event_record.hpp  metadata_record.hpp  payload_record.hpp  stream_consumer_offset_record.hpp  stream_entry_record.hpp  stream_record.hpp
internal/db/postgres/:  pg_transaction.cpp  CMakeLists.txt  connection_pool.cpp  migrate.cpp  pg_pool.cpp  pg_pool.hpp  pg_repository.cpp  pg_repository.hpp  pg_tx.cpp  pg_tx.hpp  postgres_database.cpp  pqxx_compat.cpp  prepared_statements.cpp
internal/expiration/: expiration_worker.cpp  expiration_worker.hpp
internal/grpc/: admin_server.cpp  admin_server.hpp  catalog_server.cpp  catalog_server.hpp  data_server.cpp  data_server.hpp  grpc_error.cpp  grpc_error.hpp  otel_interceptor.cpp  otel_interceptor.hpp  stream_server.cpp  stream_server.hpp
internal/lease/: lease.hpp  lease_manager.cpp  lease_manager.hpp  lease_table.cpp  lease_table.hpp
internal/lineage/: lineage_graph.cpp  lineage_graph.hpp
internal/metadata/: metadata_cache.cpp  metadata_cache.hpp
internal/model/: location.hpp  payload.hpp  state_machine.hpp  tier.hpp
internal/observability/: logging.cpp  logging.hpp  metrics.cpp  spans.hpp  tracing.cpp
internal/runtime/: CMakeLists.txt  config_loader.cpp  server.cpp  server.hpp  shutdown.cpp
internal/service/: CMakeLists.txt  admin_service.cpp  admin_service.hpp  allocation_service.cpp  catalog_service.cpp  catalog_service.hpp  data_service.cpp  data_service.hpp  durability_service.cpp  eviction_service.cpp  lineage_service.cpp  observe_rpc.hpp  payload_service.cpp  resolve_service.cpp  service_context.hpp  stream_service.cpp  stream_service.hpp
internal/spill/: spill_scheduler.cpp  spill_scheduler.hpp  spill_task.hpp  spill_worker.cpp  spill_worker.hpp
internal/storage/: storage_backend.hpp  storage_factory.cpp  storage_factory.hpp
internal/tiering/: pressure_state.hpp  tiering_manager.cpp  tiering_manager.hpp  tiering_policy.cpp  tiering_policy.hpp
internal/util/: arrow.cpp  arrow.h  errors.hpp  time.cpp  time.hpp  uuid.cpp  uuid.hpp
tests/: CMakeLists.txt
tests/benchmarks/: CMakeLists.txt  allocate_commit_bench.cpp  concurrent_read_bench.cpp  snapshot_cache_bench.cpp  spill_bench.cpp
tests/integration/: CMakeLists.txt  api_integration_test.cpp  integration_skeleton_test.cpp  object_client_upload_integration_test.cpp  object_spill_integration_test.cpp  otel_tracer.cpp  otel_tracer.hpp  repository_parity_test.cpp
tests/unit/: CMakeLists.txt  catalog_service_list_payloads_test.cpp  catalog_service_medium_fixes_test.cpp  catalog_service_spill_policy_test.cpp  catalog_service_spill_wait_timeout_test.cpp  catalog_service_test.cpp  config_loader_test.cpp  cuda_integration_test.cpp  data_service_best_effort_test.cpp  expiration_worker_test.cpp  grpc_status_test.cpp  lease_manager_test.cpp  lease_table_multi_payload_test.cpp  lease_table_test.cpp  metadata_cache_test.cpp  otel_interceptor_test.cpp  payload_manager_concurrency_test.cpp  payload_manager_critical_fixes_test.cpp  payload_manager_delete_lease_race_test.cpp  payload_manager_delete_test.cpp  payload_manager_eviction_policy_test.cpp  payload_manager_hydrate_size_metadata_test.cpp  payload_manager_import_test.cpp  payload_manager_smoke_test.cpp  payload_manager_snapshot_read_test.cpp  payload_manager_spill_source_remove_failure_test.cpp  payload_manager_ttl_test.cpp  placement_engine_test.cpp  spill_worker_independent_stop_test.cpp  sqlite_concurrent_isolation_test.cpp  sqlite_transaction_test.cpp  storage_sidecar_test.cpp  stream_service_concurrency_test.cpp  stream_service_retention_test.cpp  stream_service_subscribe_next_offset_test.cpp  tier_accounting_stress_test.cpp  tiering_manager_stop_test.cpp  tiering_policy_test.cpp  tiering_pressure_test.cpp  unit_skeleton_test.cpp  (+1 more)
(+261 files in other folders)
